@@ -998,6 +998,28 @@ null!=[1,2,3]							true
 1!=null								true
 [1,2,3]!=null							true
 null!=null							false
+RowsOf(null)+1							((null)+1)
+ColumnsOf(null)+1						((null)+1)
+IsValueOnly([0,1;2,4])						true
+IsValueOnly([0,1;"k",4])					false
+IsValueOnly(null)						true
+IsMatrixRational(null)						true
+IsMatrixRational([1,2;3/4,5])					true
+IsMatrixRational([1,2;3/4,5.1])					false
+IsMatrixInteger(null)						true
+IsMatrixInteger([1,2;4,5])					true
+IsMatrixInteger([1,2;3/4,5])					false
+IsMatrixInteger([1,2;3/4,5.1])					false
+IsMatrixReal(null)						true
+IsMatrixReal([1,2;4,5])						true
+IsMatrixReal([1,2;3/4,5.1])					true
+IsMatrixReal([1,2;3/4,5.1+1i])					false
+IsMatrixSquare(null)						true
+IsMatrixSquare([1])						true
+IsMatrixSquare([1,2;3,4])					true
+IsMatrixSquare([1,2,3,4])					false
+SetMatrixSize(null,2,3)						[0,0,0;0,0,0]
+ExpandMatrix(null)+1						((null)+1)
 load "nullspacetest.gel"					true
 load "longtest.gel"						true
 load "testprec.gel"						true
