@@ -1,13 +1,16 @@
 Changes to 1.0.10
 
-* Allow changing variable names for all 2D plotting functions
-* Add SlopefieldTicks, VectorfieldTicks, and LinePlotVariableNames parameters
+* Allow changing variable names for all plotting functions
+* Add SlopefieldTicks, VectorfieldTicks, LinePlotVariableNames, and
+  SurfacePlotVariableNames, parameters
 * Add AskButtons interactive function
+* Support for setting legend on LinePlotDrawLine with a "legend" parameter
 * Allow comparisons (== and !=) with null, treating it as an empty matrix
 * Fix compilation without gtksourceview (thanks to Joe Sapp for pointing this
   out)
 * Fix some crashes in plotting code
 * Allow slopefield solutions to leave plot window by a small fudge factor.
+* fix compilation with newer sealed vte (Vincent Untz)
 
 * For some of the changes the author (Jiri) was partially supported by
   NSF grant DMS 0900885 and the University of Illinois at Urbana-Champaign
