@@ -1,3 +1,10 @@
+Mon Aug 30 13:41:49 2010  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/funclib.c: ExpandMatrix,SetMatrixSize,ColumnsOf,RowsOf,
+	  IsMatrix* accept null as the input (0x0) matrix and act accordingly
+
+	* src/geniustests.txt: Add tests
+
 Mon Aug 30 13:28:23 2010  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: Add "legend" style parameter to LinePlotDrawLine
